--- a/plugins/playingInfo/package.json
+++ b/plugins/playingInfo/package.json
@@ -3,7 +3,7 @@
 	"displayName": "PlayNowInfo",
 	"lunaBundleName": "luna.playNowInfo",
 	"version": "0.1.0",
-	"description": "현재 TIDAL 재생 세부 정보를 콘솔에 기록합니다.",
+	"description": "현재 TIDAL 재생 정보를 Node서버와 통신하여 LCD창에 표시하고 리모콘 요청을 처리해 줍니다.",
 	"author": {
 		"name": "kimdh08",
 		"url": "https://github.com/kimdh08/TidaLuna"
